# probo

./: .vercelignore  README.md  technicaldocs.md
.github/workflows/: ci.yml
proofbook/: .env.example  .gitignore  .vercelignore  Anchor.toml  DEPLOY.md  Makefile  README.md  brand.md  package-lock.json  package.json  railway.api.json  railway.keeper.json
proofbook/.github/workflows/: ci.yml
proofbook/api/src/: contracts.ts  faucet.ts  index.ts  queries.ts  stream.ts
proofbook/data/: tournament.ts
proofbook/db/prisma/: schema.prisma
proofbook/db/src/: client.ts  import.ts
proofbook/docs/: ARCHITECTURE.md  CLI.md  COVERAGE.md  DEPLOY.md  DESIGN.md  ENGINEERING_NOTES.md  INTEGRITY_AUDIT.md  ONCHAIN_INTERFACE.md  SECURITY_AUDIT.md  TXLINE_INTERFACE.md
proofbook/idl/: mock_oracle.json
proofbook/keeper/: package.json  tsconfig.json
proofbook/keeper/fixtures/: 18193785.json
proofbook/keeper/scripts/: backfill-catalogue.ts  backfill-settle.ts  catalogue.ts  coverage.ts  demo-bets.ts  demo-seed.sh  e2e.sh  integrity-audit.ts  preflight.ts  proof-size.ts  prop-vault.ts  seed-liquidity.ts  seed-open-catalogue.ts  seed-tournament.ts  setup-faucet.ts  sharp-vs-crowd.ts  sync-now.ts  txline-conformance.ts  verify-legacy-accounts.ts  verify-receipt.ts
proofbook/keeper/src/: capture.ts  config.ts  index.ts  leader.ts  logger.ts  (+2 more)
proofbook/programs/mock_oracle/: Cargo.toml
proofbook/programs/mock_oracle/src/: lib.rs
proofbook/programs/proofbook/: Cargo.toml
proofbook/programs/proofbook/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  math.rs  state.rs
proofbook/programs/proofbook/src/instructions/: cancel_market.rs  claim_refund.rs  claim_winnings.rs  initialize_combo_spec.rs  initialize_market.rs  lock_market.rs  place_bet.rs  prop_vault.rs  settle_market.rs  settle_market_v3.rs  withdraw_fees.rs
proofbook/programs/proofbook/src/oracle/: mod.rs
proofbook/scripts/: api-supervisor.sh  backup-db.sh  demo.sh  keeper-supervisor.sh  localnet.sh  settle-real-devnet.ts  test-anchor.sh  test-integration.sh  tournament.sh
proofbook/sdk/: package.json  tsconfig.json
proofbook/shared/: contracts.ts  keys.ts  markets.ts
proofbook/tests/: combo.test.ts  helpers.ts  proofbook.ts  standings.test.ts  vault.test.ts
proofbook/web/: .vercelignore  package-lock.json  package.json
(+89 files in other folders)
